--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-IMAGE_URL=https://storage.googleapis.com/image-graphpreql.appspot.com
+NEXT_PUBLIC_IMAGE_URL=https://storage.googleapis.com/image-graphpreql.appspot.com
