--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.43.8",
     "swiper": "^9.1.1",
     "typescript": "5.0.2"
@@ -31,6 +32,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/graphql": "^14.5.0",
+    "@types/react-flatpickr": "^3.8.8",
     "autoprefixer": "^10.4.14",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
