--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "graphql": "^16.6.0",
+    "gsap": "^3.11.5",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
