--- a/package.json
+++ b/package.json
@@ -25,18 +25,13 @@
     "react-dom": "18.2.0",
     "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.43.8",
-    "swiper": "^9.1.1",
-    "typescript": "5.0.2"
+    "typescript": "5.0.2",
+    "@graphql-codegen/client-preset": "^2.1.1",
+    "@types/graphql": "^14.5.0",
+    "@types/react-flatpickr": "^3.8.8"
   },
   "devDependencies": {
-    "@graphql-codegen/client-preset": "^2.1.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@types/graphql": "^14.5.0",
-    "@types/react-flatpickr": "^3.8.8",
     "autoprefixer": "^10.4.14",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
   }
