--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.10",
+    "@graphql-codegen/cli": "^3.2.2",
+    "@graphql-codegen/client-preset": "^2.1.1",
+    "@types/graphql": "^14.5.0",
     "@types/node": "18.15.10",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
+    "@types/react-flatpickr": "^3.8.8",
     "dayjs": "^1.11.7",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
@@ -25,10 +29,7 @@
     "react-dom": "18.2.0",
     "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.43.8",
-    "typescript": "5.0.2",
-    "@graphql-codegen/client-preset": "^2.1.1",
-    "@types/graphql": "^14.5.0",
-    "@types/react-flatpickr": "^3.8.8"
+    "typescript": "5.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
