sitemap設定の追加

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,5 @@
 {
+  "ignorePatterns": ["*.config.js"],
   "extends": "next/core-web-vitals",
   "rules": {
     "@next/next/no-img-element": "off",
