--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export && next-sitemap --config sitemap.config.js",
     "start": "next start",
     "lint": "next lint",
     "codegen": "graphql-codegen --config codegen.ts",
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "next-sitemap": "^4.0.6",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
   }
